--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -4640,4 +4640,14 @@ margin-right: 21px;
     margin-right: 10px;
 }
 
+.translated-ltr{margin-top:-40px;}
+.translated-ltr{margin-top:-40px;}
+.goog-te-banner-frame {display: none;margin-top:-20px;}
 
+.goog-logo-link {
+   display:none !important;
+} 
+
+.goog-te-gadget{
+   color: transparent !important;
+}
