--- a/public/frontend/styles/main_styles.css
+++ b/public/frontend/styles/main_styles.css
@@ -3657,3 +3657,14 @@ select option
 {
 	margin-right: 0px;
 }
+.translated-ltr{margin-top:-40px;}
+.translated-ltr{margin-top:-40px;}
+.goog-te-banner-frame {display: none;margin-top:-20px;}
+
+.goog-logo-link {
+   display:none !important;
+} 
+
+.goog-te-gadget{
+   color: transparent !important;
+}
