--- a/public/frontend/styles/main_styles.css
+++ b/public/frontend/styles/main_styles.css
@@ -773,9 +773,26 @@ select option
 }
 .wishlist_count
 {
-	margin-top: -2px;
-	color: #a3a3a3;
-	font-size: 14px;
+	position: absolute;
+	bottom: -3px;
+	right: 70px;
+	width: 23px;
+	height: 23px;
+	background: #0e8ce4;
+	border-radius: 50%;
+	text-align: center;
+}
+.wishlist_count span
+{
+	display: block;
+	line-height: 23px;
+	font-size: 12px;
+	color: #FFFFFF;
+	-webkit-transform: translateY(1px);
+	-moz-transform: translateY(1px);
+	-ms-transform: translateY(1px);
+	-o-transform: translateY(1px);
+	transform: translateY(1px);
 }
 .cart_count
 {
